--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,4 @@
-manikin_db = {
+postgres_db = {
   connectionPool = "HikariCP" //use HikariCP for our connection pool
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource" //Simple datasource with no connection pooling. The connection pool has already been specified with HikariCP.
   properties = {
@@ -8,5 +8,44 @@ manikin_db = {
     user = "postgres"
     password = "manikin"
   }
-  numThreads = 10
+  numThreads = 4
+}
+
+cockroach_db1 = {
+  connectionPool = "HikariCP" //use HikariCP for our connection pool
+  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource" //Simple datasource with no connection pooling. The connection pool has already been specified with HikariCP.
+  properties = {
+    serverName = "localhost"
+    portNumber = "26257"
+    databaseName = "manikin"
+    user = "postgres"
+    password = "manikin"
+  }
+  numThreads = 4
+}
+
+cockroach_db2= {
+  connectionPool = "HikariCP" //use HikariCP for our connection pool
+  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource" //Simple datasource with no connection pooling. The connection pool has already been specified with HikariCP.
+  properties = {
+    serverName = "localhost"
+    portNumber = "26258"
+    databaseName = "manikin"
+    user = "postgres"
+    password = "manikin"
+  }
+  numThreads = 4
+}
+
+cockroach_db3= {
+  connectionPool = "HikariCP" //use HikariCP for our connection pool
+  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource" //Simple datasource with no connection pooling. The connection pool has already been specified with HikariCP.
+  properties = {
+    serverName = "localhost"
+    portNumber = "26259"
+    databaseName = "manikin"
+    user = "postgres"
+    password = "manikin"
+  }
+  numThreads = 4
 }
