--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -49,3 +49,16 @@ cockroach_db3= {
   }
   numThreads = 4
 }
+
+cockroach_single= {
+  connectionPool = "HikariCP" //use HikariCP for our connection pool
+  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource" //Simple datasource with no connection pooling. The connection pool has already been specified with HikariCP.
+  properties = {
+    serverName = "localhost"
+    portNumber = "26267"
+    databaseName = "manikin"
+    user = "postgres"
+    password = "manikin"
+  }
+  numThreads = 4
+}
