h2 store + list example

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,6 +11,13 @@ postgres_db = {
   numThreads = 4
 }
 
+h2_db = {
+  url = "jdbc:h2:mem:test1"
+  driver = org.h2.Driver
+  connectionPool = disabled
+  keepAliveConnection = true
+}
+
 cockroach_db1 = {
   connectionPool = "HikariCP" //use HikariCP for our connection pool
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource" //Simple datasource with no connection pooling. The connection pool has already been specified with HikariCP.
